style snafu. fixed footer jumping vertically but now it's left-aligned somehow. fixed some bad height choices for some elements

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,4 +1,7 @@
 <style>
+	.header {
+		top: 0;
+	}
   	h1 {
   		text-align: center;
   		top: 0;
@@ -34,12 +37,13 @@
 		width: 80%;
 	}
 	.everything {
-		position: relative;
-		justify-content: space-between;
+		display: flex;
 		flex-direction: column;
-		height: 100vh;
+		justify-content: space-between;
 		background-color: var(--bg-color);
   		color: var(--text-color);
+  		height: 100%;
+  		min-height: 100vh;
 	}
 	.container {
 		display: flex;
@@ -47,12 +51,26 @@
 		gap: 8px 4px;
 		flex-wrap: wrap;
 	}
-	.footer {
+	.header {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%);
+		height: 8rem;
+	}
+	#content-wrap {
+		min-height: calc(100vh - 11rem);
+		padding-bottom: 1rem;
+		display: block;
+    	flex: 1 0 auto;
+	}
+	#footer {
+		position: absolute;
 		bottom: 0;
 		left: 50%;
 		transform: translateX(-50%);
-		position: absolute;
 		text-align: center;
+		height: 1rem;
 	}
 	.close {
 		color: #aaa;
